--- a/index.html
+++ b/index.html
@@ -300,6 +300,20 @@
             margin-bottom: 20px;
             list-style: decimal;
         }
+        .certificate-block li {
+            display: inline-block;
+            float: left;
+        }
+        .certificate-block li:not(:last-child) {
+            margin-right: 30px;
+        }
+        .certificate-block a {
+            display: inline-block;
+        }
+        .certificate-block img {
+            height: auto;
+            max-width: 260px;
+        }
         @media only screen and (max-width: 1100px) {
             .education-2:before{
                 margin-left: -9px;
@@ -343,7 +357,7 @@
                         </p>
                     </li>
                     <li>
-                        <span> <b> Age: </b> 35</span>
+                        <span> <b> Age: </b> 36</span>
                     </li>
                     <li>
                         <span> <b> Email: </b> <a href="mailto:lilitgalstyan2222@gmail.com">lilitgalstyan2222@gmail.com</a></span>
@@ -369,6 +383,9 @@
             <p>
                 Version Control - GIT, Photoshop, Visual Basic
             </p>
+             <p>
+               Adobe XD, InVision, Figma, Zeplin, Scratch, SPSS
+            </p>
             <p>
                 MS Office, MS Project, JMP, Mathcad Professional
             </p>
@@ -381,6 +398,13 @@
         </div>
         <h2 class="block-title">Work Experience</h2>
         <div class="white-box">
+              <p>
+                <b> Scratch teacher</b>
+            </p>
+            <p>
+                Working as a programming teacher in Shcodim programming school<br>
+                May 2020-present
+            </p>
             <p>
                 <b> FrontEnd developer</b>
             </p>
@@ -432,6 +456,14 @@
                 </div>
             </div>
         </div>
+         <h2 class="block-title">Certificates</h2>
+        <div class="white-box">
+            <ul class="certificate-block">
+                <li><a href="images/Html-certificate.jpg" target="_blank"> <img src="images/Html-certificate.jpg" alt="Html-certificate"></a></li>
+                <li><a href="images/Css-certificate.jpg" target="_blank"> <img src="images/Css-certificate.jpg" alt="Css-certificate"></a></li>
+                <li><a href="images/jQuery-certificate.jpg" target="_blank"> <img src="images/jQuery-certificate.jpg" alt="jQuery-certificate"></a></li>
+            </ul>
+        </div>
 
         <h2 class="block-title">LIST OF PUBLISHED ARTICLES</h2>
         <div class="white-box" style="padding: 30px 50px;">
@@ -454,6 +486,21 @@
             </ul>
 
             <div id="container">
+                 <div class="item laravel">
+                    <a href="https://www.valenzanowine.com/" target="_blank">
+                        <img src="images/valenzano.png" alt="valenzano">
+                    </a>
+                </div>
+                <div class="item laravel">
+                    <a href="https://junebugweddings.com/" target="_blank">
+                        <img src="images/junebug.png" alt="junebug">
+                    </a>
+                </div>
+                <div class="item laravel">
+                    <a href="https://front.proflock.am/" target="_blank">
+                        <img src="images/overstock-logo.png" alt="overstock">
+                    </a>
+                </div>
                 <div class="item wordpress">
                     <a href="https://mikecoluzzi.com/" target="_blank">
                         <img src="images/mike-coluzzi.png" alt="mike-coluzzi">
@@ -479,11 +526,7 @@
                         <img src="images/jetdata.png" alt="jetdata">
                     </a>
                 </div>
-                <div class="item laravel">
-                    <a href="http://158.106.138.245" target="_blank">
-                        <img src="images/valenzano.png" alt="valenzano">
-                    </a>
-                </div>
+               
             </div>
         </div>
 
